<resources>
    <string name="app_name">Vuey</string>
    <string name="album">Album</string>
    <string name="artist">Artist</string>
    <string name="tracks">Tracks</string>
    <string name="movie">Movie</string>
    <string name="search">Search</string>
    <string name="empty_search_query">Enter at least 1 character</string>
    <string name="back">Back</string>
    <string name="cast">Cast</string>
    <string name="spoken_languages">Spoken Languages</string>
    <string name="cast_is_empty">Cast list is empty</string>
    <string name="languages_empty">Spoken language list is empty</string>
    <string name="added_to_library">Added to library</string>
    <string name="removed_from_library">Removed from library</string>
    <string name="sec">sec</string>
    <string name="library">Library</string>
    <string name="hour">h</string>
    <string name="statistics">Statistics</string>
    <string name="listened_albums">Listened albums</string>
    <string name="listened_songs">Listened songs</string>
    <string name="total_time">Total time</string>
    <string name="close">Close</string>
    <string name="add">Add</string>
    <string name="save_icon">Save Icon</string>
    <string name="album_image">Album Image</string>
    <string name="movie_backdrop">Movie Backdrop</string>
    <string name="cast_image">Cast Image</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="browse">Browse</string>
    <string name="what_did_you_listen_to_today">What did you listen to today?</string>
    <string name="search_artist_or_album">Search artist or album</string>
    <string name="search_album">Search album</string>
    <string name="what_did_you_watch_today">What did you watch today?</string>
    <string name="search_movie">Search movie</string>
    <string name="watched_movies">Watched movies</string>
    <string name="genres">Genres</string>
    <string name="genre_list_is_empty">Genre list is empty</string>
    <string name="top_tracks">Top Tracks</string>
    <string name="artist_image">Artist Image</string>
    <string name="top_tracks_list_is_empty">Top tracks list is empty</string>
    <string name="follow">Follow</string>
    <string name="followed">Followed</string>
    <string name="artist_page">Artist Page</string>
    <string name="something_empty_here">Something empty here</string>
    <string name="quickly_add_something_to_your_list">Quickly add something to your list</string>
    <string name="it_looks_like_you_don_t_have_internet">No internet, please check your internet connection.</string>
    <string name="added_to_listen_later">Added to Listen Later</string>
    <string name="added_to_watch_later">Added to Watch Later</string>
    <string name="removed_from_listen_later">Removed from Listen Later</string>
    <string name="removed_from_watch_later">Removed from Watch Later</string>
    <string name="for_later">For later</string>
    <string name="listen_later">Listen later</string>
    <string name="there_nothing_here">There\'s nothing here</string>
    <string name="you_have_nothing_for_later">You have nothing for later</string>
    <string name="first_you_need_add_something_to_list">First, you need to add something to the list</string>
    <string name="random_album">Random album</string>
    <string name="watch_later">Watch later</string>
    <string name="random_movie">Random movie</string>
    <string name="settings">Settings</string>
    <string name="register">Register</string>
    <string name="create_your_new_account">Create your new account</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log in</string>
    <string name="welcome_back">Welcome back</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="don_t_have_account">Don\'t have account?</string>
</resources>