<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/imgLater"
        android:title="@string/for_later"
        app:showAsAction="ifRoom"
        android:iconTint="@color/menuIconTint"
        android:icon="@drawable/ic_time_outline"
        tools:targetApi="o" />

    <item android:id="@+id/imgAdd"
        android:title="@string/add"
        android:iconTint="@color/menuIconTint"
        app:showAsAction="always"
        android:icon="@drawable/ic_playlist_add"
        tools:targetApi="o" />

    <item android:id="@+id/imgStatistics"
        android:title="@string/statistics"
        app:showAsAction="always"
        android:iconTint="@color/menuIconTint"
        android:icon="@drawable/ic_analytics"
        tools:targetApi="o" />

</menu>