<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.settings.SettingsFragment">

    <com.google.android.material.appbar.AppBarLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/appBar"
        android:background="@null"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/cabin_semibold"
                android:text="@string/settings"
                android:textColor="@color/textColor"
                android:textSize="20sp" />

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <Button
        android:textColor="@color/white"
        android:backgroundTint="@color/blue"
        app:layout_constraintTop_toBottomOf="@id/appBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:fontFamily="@font/cabin"
        android:id="@+id/btnSignUp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"/>

    <LinearLayout
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUp">

        <TextView
            android:textColor="@color/textColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"/>

        <Button
            android:layout_width="wrap_content"
            android:textColor="@color/blue"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:id="@+id/btnLogin"
            style="@style/Widget.Material3.Button.TextButton"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>