<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".feature_album.presentation.ui.SearchAlbumFragment">

    <LinearLayout
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:id="@+id/linearLayoutSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                app:tint="@color/white"
                android:id="@+id/imgBack"
                android:layout_marginEnd="10dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back"
                android:contentDescription="@string/search" />

            <TextView
                android:text="@string/browse"
                android:textSize="26sp"
                android:textColor="@color/white"
                android:fontFamily="@font/cabin_semibold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cabin"
            android:layout_marginTop="5dp"
            android:textColor="@color/gray"
            android:textSize="16sp"
            android:text="@string/what_did_you_listen_to_today"/>

        <EditText
            android:textCursorDrawable="@drawable/text_cursor"
            android:imeOptions="actionSearch"
            android:textStyle="italic"
            android:drawableEnd="@drawable/ic_clear"
            android:layout_marginTop="10dp"
            android:drawableTint="@color/gray"
            android:textColorHint="@color/gray"
            android:maxLines="1"
            android:inputType="text"
            android:drawablePadding="10dp"
            android:hint="@string/search_artist_or_album"
            android:drawableStart="@drawable/ic_search"
            android:padding="10dp"
            android:id="@+id/etSearch"
            android:fontFamily="@font/cabin"
            android:textColor="@color/white"
            android:background="@drawable/edit_text_search_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:overScrollMode="never"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutSearch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/recyclerViewAlbum"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        tools:visibility="visible"
        android:indeterminateTint="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>